--- a/Fetching quote/style.css
+++ b/Fetching quote/style.css
@@ -69,8 +69,9 @@ main {
   border-radius: 0;
 }
 .active {
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   border-radius: 0;
+  /* font-size: .8rem; */
   
   background-color: var(--dark-secondary);
 }
