--- a/Fetching quote/style.css
+++ b/Fetching quote/style.css
@@ -53,7 +53,7 @@ main {
 }
 .main-navs {
   list-style: none;
-  width: inherit;
+  width: 98%;
   height: 100%;
   /* background-color: red; */
 }
@@ -68,13 +68,13 @@ main {
   cursor: pointer;
   background-color: var(--dark-secondary-alt);
 }
-.main-navs > *:hover {
+/* .main-navs > *:hover {
   background-color: var(--dark-secondary);
-  border-radius: 0;
-}
+  border-radius: 0 100px 100px 0;
+} */
 .active {
   /* text-transform: uppercase; */
-  border-radius: 0;
+  border-radius: 0 100px 100px 0;
   /* font-size: .8rem; */
   
   background-color: var(--dark-secondary);
