--- a/Fetching quote/style.css
+++ b/Fetching quote/style.css
@@ -215,10 +215,48 @@ li {
   }
 }
 
+
 /* MEDIA QUERY */
-@media screen and (max-width: 630px) {
+@media screen and (max-width: 658px) {
   .btns {
     display: flex;
     flex-direction: column;
+  }
+  .navigation {
+    height: 10vh;
+    padding: 0;
+    overflow-x: scroll;
+    overflow-y: hidden;
+
+    display: flex;
+    align-items: center;
+    
+    /* background-color: red; */
+  }
+  .main-navs {
+    width: 100%;
+    height: inherit;
+    padding: 1rem 0;
+    
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 30px;
+
+    /* background-color: blue; */
+  }
+  .main-navs > li {
+    font-size: .8rem;
+    width: fit-content;
+    padding: 0 0.5rem;
+    margin: 0;
+
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+  }
+
+  .display-section {
+    height: 85%;
   }
 }
